--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,31 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jyotish Connect</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="welcome.component.css">
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-</head>
-<body>
-    <div class="container" fxFlex="100" fxLayoutAlign="center center">
-        <div class="background">
-            <h1>Welcome To</h1>
-            <h2>
-                <span class="the-text">The</span> 
-                <span class="jyotish-connect">Jyotish Connect</span>
-            </h2>
-            <p>
-                Unveiling the universe Within You. Jyotish Connect helps you exploring your cosmic path...
-            </p>
-            <div class="btn-g">
-                <a class="batt"><i class="fas fa-comments"> Talk with Astrologer</i>
-                </a>
-                <a class="btn-p"><i class="fas fa-phone"> Talk to Astrologer</i>
-                </a>
-            </div>
-        </div>
+<div class="main-container">
+  <div class="background">
+    <h1>Welcome To</h1>
+    <h2>
+      <span class="the-text">The</span>
+      <span class="jyotish-connect">Jyotish Connect</span>
+    </h2>
+    <p>
+      Unveiling the universe Within You. Jyotish Connect helps you exploring
+      your cosmic path...
+    </p>
+    <div class="btn-g">
+      <a class="batt"><i class="fas fa-comments"> Talk with Astrologer</i> </a>
+      <a class="btn-p"><i class="fas fa-phone"> Talk to Astrologer</i> </a>
     </div>
-</body>
-</html>
+  </div>
+</div>
+
+<div class="card-container">
+  <!-- card -->
+
+  <div class="row">
+    <div class="col-md-6">
+      <img
+        class="card-image"
+        src="https://media.istockphoto.com/id/1443628665/photo/adult-writing-in-the-classroom.jpg?s=1024x1024&w=is&k=20&c=WZ9Zv8MPhqo4F4nRhkqGaK9uohN6Z7PE2aXfZyxDdoc="
+        alt="astrologer"
+      />
+    </div>
+    <div class="col-md-6">
+      <div class="text-content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia
+        impedit alias saepe maiores earum est expedita, vel beatae cumque magni
+        voluptate eos voluptatibus eligendi quas praesentium excepturi?
+        Sapiente, eveniet officiis.
+      </div>
+    </div>
+  </div>
+</div>
