`Added CSS styles and HTML structure for all component`

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,40 @@
-<p>footer works!</p>
+<div class="card-container">
+    <div class="row">
+        <div class="col-md-3">
+            <h1>Jyotish <span style="color: orange;">Connect</span></h1>
+            <p>We help you exploring your cosmic path</p>
+            <div class="social-icons">
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="quick">
+                <h3>Quick Link</h3>
+                <a href="#">About Us</a>
+                <a href="#">Our Astrologer</a>
+                <a href="#">Daily Horoscope</a>
+                <a href="#">Quotes of the day</a>
+                <a href="#">Testimonials</a>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="Contact">
+                <h3>Contact Us</h3>
+                <p>bookingcelestial.com</p>
+                <p>(+62) 1234 5678</p>
+                <p>Oak Building 19, North City</p>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="subscribe">
+                <h3>Subscribe for any updates</h3>
+                <input type="email" placeholder="Your Email">
+                <button>Subscribe</button>
+            </div>
+        </div>
+
+    </div>
+
+</div>
