--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,6 +1,7 @@
 /* Navbar styles */
-.nav {width: 1920px;
-    height: 80px;
+.nav {
+    width: 100%;
+    height: 40px;
     gap: 0px;
     opacity: 0px;
     background-color: #3e72a5; /* This is a light gray color similar to bg-body-tertiary */
