--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,7 @@
 html,
 body {
   height: 100%;
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: Montserrat;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
