--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,7 @@
 <div class="card-container">
     <div class="row">
         <div class="col-md-3">
+            <div class="hedar">
             <h1>Jyotish <span style="color: orange;">Connect</span></h1>
             <p>We help you exploring your cosmic path</p>
             <div class="social-icons">
@@ -8,6 +9,7 @@
                 <a href="#"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
+        </div>
         </div>
         <div class="col-md-3">
             <div class="quick">
@@ -30,8 +32,10 @@
         <div class="col-md-3">
             <div class="subscribe">
                 <h3>Subscribe for any updates</h3>
-                <input type="email" placeholder="Your Email">
-                <button>Subscribe</button>
+                <div class="subscribe-container">
+                    <input type="email" placeholder="Your Email">
+                    <button class="btn">Subscribe</button>
+                </div>
             </div>
         </div>
 
