--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -9,7 +9,7 @@
             <a class="nav-link" routerLink="/About">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Our Astrologers</a>
+            <a class="nav-link" routerLink="/astrologer">Our Astrologers</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Daily Horoscope</a>
