--- a/src/app/components/astrologer/astrologer.component.css
+++ b/src/app/components/astrologer/astrologer.component.css
@@ -15,16 +15,17 @@
 
 }
 
-.button{
+.button {
     gap: 70px;
 }
+
 .button p {
-font-family: Montserrat;
-font-size: 20px;
-font-weight: 400;
-line-height: 20px;
-text-align: left;
-}  
+    font-family: Montserrat;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left;
+}
 
 .button .btn {
     width: Hug (100px)px;
@@ -39,7 +40,24 @@ text-align: left;
     margin-bottom: 30px;
     margin-left: 100px;
     background: linear-gradient(90deg, #FACC15 0%, #F97316 100%);
+}
 
+.card img {
+    gap: 10px;
+    padding: 10px;
+}
 
+.card h3 {
+    font-family: Montserrat;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 39.01px;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #1E3A8A;
+}
 
+.card p {
+    text-align: center;
 }
