--- a/src/app/components/astrologer/astrologer.component.html
+++ b/src/app/components/astrologer/astrologer.component.html
@@ -18,28 +18,28 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="card">
-                            <img src="" alt="">
+                            <img src="../../../assets/images/image.png" alt="">
                             <h3>Saahil Kohli</h3>
                             <p>Vastu Astrologer</p>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="card">
-                            <img src="" alt="">
+                            <img src="../../../assets/images/image (1).png" alt="">
                             <h3>Vijaylakshmi Krishna </h3>
                             <p>Vastu Astrologer</p>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="card">
-                            <img src="" alt="">
+                            <img src="../../../assets/images/image (2).png" alt="">
                             <h3>Dr. Hemant Barua </h3>
                             <p>Vastu Astrologer</p>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="card">
-                            <img src="" alt="">
+                            <img src="../../../assets/images/image (3).png" alt="">
                             <h3>Sanjay B. Jumaani</h3>
                             <p>Vastu Astrologer</p>
                         </div>
