--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -2,14 +2,16 @@
   <div class="background">
     <!-- header -->
     <header class="header">
-      <h1 class="header-title">Jyotish Connect</h1>
+      <div class="logo">
+        <img src="../../../assets/logo/Group 34.png" alt="">
+      </div>
       <nav class="nav">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link" routerLink="/About">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/astrologer">Our Astrologers</a>
+            <a class="nav-link" >Our Astrologers</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Daily Horoscope</a>
@@ -38,8 +40,16 @@
       your cosmic path...
     </p>
     <div class="btn-g">
-      <a class="batt"> Chat with Astrologer </a>
-      <a class="btn-p"> Talk to Astrologer </a>
+      <a class="batt"> <img src="../../../assets/images/Dialog.png" alt=""> Chat with Astrologer </a>
+      <a class="btn-p"> <img src="../../../assets/Call/Phone Calling Rounded.png" alt=""> Talk to Astrologer </a>
     </div>
   </div>
 </div>
+<app-astrologer />
+<app-discover />
+<app-discoverdaily />
+<app-happycustomer />
+<app-blogs />
+<app-qday />
+<app-guid />
+<app-footer />
