--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,3 +1,5 @@
+
+<app-header></app-header>
 <div class="main-container">
     <div class="header">
         <h1>
@@ -59,3 +61,9 @@
                 </div>
             </div>
         </div>
+        </div>
+</div>
+
+<div>
+    
+</div>
