--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 40%;
     padding: 50px;
-    background-image: url('https://s3-alpha-sig.figma.com/img/e46d/60f7/adf737cefaaeafda608b861e429d9b91?Expires=1737331200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=l~1fmaJlygNvRaCXlS2YIDGofKJ0acqnVIySLEFFiVUwPQMCkAQw8Uv8yRH71l15uBfuvfkEqtWoJJG9CrP9Wn4mNUX3Kz8OmPWhAwRokCK7eZMGrO~DFtfuJGCSj-uyiRuwNdSF9lC9hNPKOsKXMyAkA9HkYBw4nQeEGDF6rHtVBAgzRk~O4Sh~1LE8L~KDX9wfJ7JJNmKrcECoDw9RjFWMKfimwzNYLzQSur~21ynORpVEqhvyioyCnD0z03c4I9VDPEpKphag1-adk1Msaj5unIFHtXSMF-kMU6AC8E9CLhrGem0nY5oKp4sy2txF-QwcgK9S-Oeq~519Xc6LyA__');
+    background-image: url('../../../assets/footer/footer-bg\ \(5\).png');
 }
 
 .row {
