--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,15 +1,17 @@
 /* Navbar styles */
-.nav {
+.navbar {
     width: 100%;
-    height: 40px;
+    height: auto;
     gap: 0px;
     opacity: 0px;
-    background-color: #3e72a5; /* This is a light gray color similar to bg-body-tertiary */
+    background-color: linear-gradient(90.21deg, #F97316 0.36%, #FAAC15 38.72%, #1E3A8A 85.6%);
 }
 
 .navbar-brand {
     font-size: 1.25rem;
     font-weight: 500;
+    
+    
 }
 
 
