--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<div class="nav" style="background-color: linear-gradient(90.21deg, #F97316 0.36%, #FAAC15 38.72%, #1E3A8A 85.6%) ;">
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <nav>Jyotish</nav>
-            <nav> connect</nav>
-            
-        </a>
+        <img src="../../../assets/logo/Group 34.png" alt="">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
             aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -37,5 +31,4 @@
         </div>
     </div>
 </nav>
-
-</html>
+</div>
