--- a/src/app/components/otp-verification/otp-verification.component.html
+++ b/src/app/components/otp-verification/otp-verification.component.html
@@ -6,7 +6,7 @@
             <div class="close">Close</div>
         </button>
         <h2>Verify <span>One Time Password</span></h2>
-        <p>Please enter the verification code sent to <br> <span> +91 - 9876543210</span></p>
+        <p>Please enter the verification code sent to <br> <span> +91 - </span></p>
         <div class="otp-inputs">
             <input type="text" maxlength="1">
             <input type="text" maxlength="1">
